trunk/Archive2/e1/41ee3d27213d6a/output
main.cpp:26:50: error: no member named 'hexfloat' in namespace 'std'
 c<<std::setw(10)   <<std::setprecision(3)<<std::hexfloat<<3.14159;
                                            ~~~~~^
1 error generated.
